<resources>
    <string name="app_name">LocalReverb</string>
    <string name="action_settings">Settings</string>
    <!-- <string name="title_activity_maps">Map</string> -->
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu1">Create Event
    </string>
    <string name="menu2">Search Events</string>
    <string name="menu3">Artist Homepage</string>
    <string name="menu4">Event Manager</string>
    <string name="menu5">Local Calendar</string>
    <string name="header">Local Reverb</string>
    <string name="title_activity_search_db">SearchDB</string>
    <string name="title_activity_create_event">CreateEvent</string>

    <string name="dialogSuccess">Success</string>
    <string name="successEvent">You have successfully created an event!</string>
    <string-array name="search_options">
        <item><sting>Event Name</sting></item>
        <item><string>Artist Name</string></item>
    </string-array>
</resources>
